PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Invalid/IfTypeCheck.pf
module IfTypeCheck {

    test Int = 5

    fun testFive(): Boolean {
        if test == true {
            return true
        }

        return false
    }
}